--- a/Automation_pipeline.ipynb
+++ b/Automation_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -109,6 +109,8 @@
        "      <th>outside_wall_area</th>\n",
        "      <th>outside_wall_area_ratio</th>\n",
        "      <th>volume</th>\n",
+       "      <th>parent_name</th>\n",
+       "      <th>tissue_label</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -127,6 +129,8 @@
        "      <td>108.799</td>\n",
        "      <td>0.734131</td>\n",
        "      <td>142.288</td>\n",
+       "      <td>fu</td>\n",
+       "      <td>fu</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -143,6 +147,8 @@
        "      <td>105.308</td>\n",
        "      <td>0.712816</td>\n",
        "      <td>131.511</td>\n",
+       "      <td>fu</td>\n",
+       "      <td>fu</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -159,6 +165,8 @@
        "      <td>101.471</td>\n",
        "      <td>0.492667</td>\n",
        "      <td>228.485</td>\n",
+       "      <td>fu</td>\n",
+       "      <td>fu</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -175,6 +183,8 @@
        "      <td>114.535</td>\n",
        "      <td>0.516727</td>\n",
        "      <td>245.79</td>\n",
+       "      <td>fu</td>\n",
+       "      <td>fu</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -191,6 +201,8 @@
        "      <td>69.4824</td>\n",
        "      <td>0.511433</td>\n",
        "      <td>132.188</td>\n",
+       "      <td>fu</td>\n",
+       "      <td>fu</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -211,21 +223,150 @@
        "3       4.84003       10.2757        221.655                   13   \n",
        "4       5.71539       6.19016        135.858                    7   \n",
        "\n",
-       "  outside_wall_area outside_wall_area_ratio   volume  \n",
-       "0           108.799                0.734131  142.288  \n",
-       "1           105.308                0.712816  131.511  \n",
-       "2           101.471                0.492667  228.485  \n",
-       "3           114.535                0.516727   245.79  \n",
-       "4           69.4824                0.511433  132.188  "
+       "  outside_wall_area outside_wall_area_ratio   volume parent_name tissue_label  \n",
+       "0           108.799                0.734131  142.288          fu           fu  \n",
+       "1           105.308                0.712816  131.511          fu           fu  \n",
+       "2           101.471                0.492667  228.485          fu           fu  \n",
+       "3           114.535                0.516727   245.79          fu           fu  \n",
+       "4           69.4824                0.511433  132.188          fu           fu  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add parent and tissue label according to variable \"parent_id\"\n",
+    "df['parent_name']=df['parent_label'].apply(lambda x: 'oi2' if x==1 else ('oi1' if x==2 else ('ii2' if x==3 else ('ii1' if x==4 else ('nu' if x==5 else ('PCh' if x==6 else ('fu' if x==7 else ('es' if x==8 else ('pl' if x==9 else 'ACh')))))))))\n",
+    "df['tissue_label'] = df['parent_label'].apply(lambda x: 'oi' if x==1 or x==2 else ('ii' if x==3 or x==4 else ('ch' if x==6 or x==10 else ('nu' if x==5 else ('fu' if x==7 else ('es' if x==8 else 'pl'))))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1793    1803\n",
+      "Name: sample_id, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count unique values in variable \"sample_id\"\n",
+    "count_sample = df['sample_id'].value_counts()\n",
+    "print(count_sample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   sample_id stage          volume\n",
+      "0       1793  3-IV  549413.2776469\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Group by variables \"sample_id\", \"stage\" and sum up the volume\n",
+    "volume_sample = df.groupby(['sample_id', 'stage'])['volume'].sum().reset_index()\n",
+    "print(volume_sample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  stage  sample_id tissue_label         volume\n",
+      "0  3-IV       1793           ch   89611.349193\n",
+      "1  3-IV       1793           es         5820.9\n",
+      "2  3-IV       1793           fu   84846.750602\n",
+      "3  3-IV       1793           ii     82750.5200\n",
+      "4  3-IV       1793           nu    13064.33455\n",
+      "5  3-IV       1793           oi  265555.296438\n",
+      "6  3-IV       1793           pl   7764.1268639\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Group by variables \"sample_id\", \"stage\" and sum up the volume\n",
+    "tissue_volume_sample = df.groupby(['stage', 'sample_id', 'tissue_label'])['volume'].sum().reset_index()\n",
+    "print(tissue_volume_sample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample_id  stage  parent_label\n",
+      "1793       3-IV   0                29\n",
+      "                  1               238\n",
+      "                  2               188\n",
+      "                  3               140\n",
+      "                  4               126\n",
+      "                  5                92\n",
+      "                  6               261\n",
+      "                  7               528\n",
+      "                  8                 1\n",
+      "                  10              171\n",
+      "                  14               29\n",
+      "Name: parent_label, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Group by variables \"sample_id\", \"stage\" and count unique values in variable \"parent\"\n",
+    "count_parent_by_sample = df.groupby(['sample_id', 'stage'])['parent_label'].value_counts().sort_index(ascending=True)\n",
+    "print(count_parent_by_sample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stage  sample_id\n",
+      "3-IV   1793         1803\n",
+      "Name: sample_id, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Group by variables \"stage\" and count unique values in variable \"sample_id\"\n",
+    "count_sample_by_stage = df.groupby(['stage'])['sample_id'].value_counts()\n",
+    "print(count_sample_by_stage)"
    ]
   }
  ],
