Thresholding and connected component analysis

--- a/Image_analysis.ipynb
+++ b/Image_analysis.ipynb
@@ -5,24 +5,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Arabidopsis seedlings are incubated with certain pharmaceuticals that attack the cell wall of the plants. This leads to increased production of lignin, a polymer that causes the seedlings to \"stiffen\" so that nothing can get through the cell wall. For analysis, we use a specific dye that docks onto the individual lignin polymers, making them visible. And this is exactly where our interest lies. Using Fiji or ImageJ, we have to manually quantify the stained regions for every sample we analyse, sometimes several hundreds in number. Instead, we would like to have a tool that can be fed with all the images and quanitifies the stained regions within seconds.\n",
+    "Arabidopsis seedlings are incubated with certain pharmaceuticals that attack the cell wall of the plants. This leads to increased production of lignin, a polymer that causes the seedlings to \"stiffen\" so that nothing can get through the cell wall anymore. For analysis, we use a specific dye that docks onto the individual lignin polymers, making them visible. And this is exactly where our interest lies. Using Fiji or ImageJ, we have to manually quantify the stained regions for every sample we analyse, sometimes several hundreds in number. Instead, we would like to have a tool that can be fed with all the images and quantifies the stained regions within seconds.\n",
     "\n",
     "<img src=\"images/root0001.png\" width=\"400\" height=\"200\">"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import cv2 as cv"
+    "import cv2 as cv\n",
+    "import matplotlib.pyplot as plt\n",
+    "import napari\n",
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +43,265 @@
     "cv.imshow(\"image\", img)\n",
     "cv.waitKey(0)\n",
     "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
+    "cv.imshow(\"grayscale image\", img_gray)\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Image layer 'img_gray' at 0x27700065510>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "viewer = napari.Viewer()\n",
+    "viewer.add_image(img, rgb=True)\n",
+    "viewer.add_image(img_gray, rgb=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[190. 190. 188. 187. 188. 188. 187. 190. 189. 187. 185. 188. 188. 191.\n",
+      " 190. 187. 187. 188. 190. 186. 185. 189. 189. 187. 185. 185. 186. 186.\n",
+      " 186. 185. 185. 185. 186. 191. 187. 185. 185. 191. 187. 187. 184. 186.\n",
+      " 185. 185. 188. 189. 185. 188. 185. 188. 193. 188. 187. 185. 186. 187.\n",
+      " 192. 190. 188. 187. 186. 187. 189. 188. 186. 187. 187. 186. 187. 185.\n",
+      " 189. 187. 186. 187. 187. 192. 187. 186. 192. 188. 188. 187. 193. 185.\n",
+      " 192. 190. 190. 187. 189. 189. 188. 190. 189. 191. 186. 189. 191. 189.\n",
+      " 188. 190. 188. 190. 189. 188. 189. 189. 187. 192. 190. 189. 188. 188.\n",
+      " 191. 189. 192. 190. 190. 189. 191. 189. 190. 189. 189. 188. 195. 189.\n",
+      " 192. 188. 189. 192. 189. 192. 190. 191. 193. 193. 189. 193. 189. 192.\n",
+      " 190. 191. 190. 191. 193. 195. 190. 188. 188. 190. 189. 193. 190. 190.\n",
+      " 188. 190. 192. 189. 189. 189. 189. 189. 190. 190. 188. 189. 189. 190.\n",
+      " 190. 191. 191. 193. 191. 193. 189. 192. 190. 192. 191. 191. 190. 190.\n",
+      " 193. 189. 190. 190. 195. 190. 190. 190. 190. 188. 188. 195. 192. 191.\n",
+      " 192. 192. 189. 189. 189. 189. 191. 191. 190. 192. 190. 191. 190. 189.\n",
+      " 193. 189. 191. 192. 190. 190. 189. 194. 193. 192. 193. 189. 192. 189.\n",
+      " 192. 191. 193. 189. 189. 189. 189. 189. 190. 189. 188. 193. 188. 191.\n",
+      " 189. 188. 190. 190. 187. 189. 190. 192. 189. 187. 189. 190. 187. 187.\n",
+      " 190. 191. 188. 188. 191. 189. 189. 188. 190. 189. 189. 187. 191. 186.\n",
+      " 190. 188. 187. 188. 188. 188. 189. 190. 188. 186. 188. 190. 187. 188.\n",
+      " 188. 187. 186. 186. 189. 188. 191. 187. 186. 188. 187. 186. 190. 193.\n",
+      " 187. 186. 190. 187. 188. 187. 189. 192. 189. 188. 192. 187. 187. 187.\n",
+      " 188. 188. 187. 187. 188. 187. 191. 190. 186. 189. 185. 187. 186. 187.\n",
+      " 187. 188. 186. 186. 185. 188. 187. 187. 187. 187. 189. 188. 188. 186.\n",
+      " 186. 188. 186. 188. 189. 189. 187. 190. 191. 187. 189. 189. 188. 192.\n",
+      " 188. 188. 189. 187. 190. 189. 189. 188. 188. 189. 189. 188. 193. 188.\n",
+      " 189. 192. 190. 191. 188. 186. 193. 190. 189. 188. 190. 192. 189. 187.\n",
+      " 189. 191. 189. 191. 189. 189. 190. 189. 189. 191. 188. 190. 191. 190.\n",
+      " 188. 188. 188. 189. 189. 190. 191. 189. 189. 190. 188. 191. 188. 189.\n",
+      " 187. 189. 187. 186. 186. 186. 185. 187. 186. 186. 184. 184. 188. 182.\n",
+      " 182. 182. 182. 181. 182. 183. 183. 181. 180. 180. 180. 177. 177. 176.\n",
+      " 177. 176. 175. 174. 174. 179. 176. 176. 176. 174. 178. 176. 176. 175.\n",
+      " 175. 177. 175. 176. 176. 179. 177. 176. 174. 175. 176. 176. 178. 177.\n",
+      " 176. 179. 177. 178. 176. 177. 180. 179. 178. 175. 177. 176. 177. 177.\n",
+      " 177. 179. 176. 177. 178. 181. 177. 176. 179. 181. 183. 179. 180. 180.\n",
+      " 179. 182. 181. 182. 183. 185. 185. 185. 188. 189. 189. 188. 191. 193.\n",
+      " 188. 192. 196. 190. 192. 191. 191. 191. 190. 193. 192. 192. 191. 193.\n",
+      " 191. 190. 190. 190. 188. 190. 191. 191. 191. 191. 190. 193. 192. 194.\n",
+      " 192. 193. 191. 192. 190. 192. 193. 196. 193. 192. 196. 192. 194. 194.\n",
+      " 194. 191. 192. 194. 191. 191. 197. 193. 193. 193. 192. 198. 191. 193.\n",
+      " 191. 192. 192. 193. 194. 194. 197. 195. 191. 192. 192. 191. 192. 192.\n",
+      " 192. 192. 190. 192. 190. 190. 193. 191. 193. 192. 193. 189. 191. 190.\n",
+      " 191. 192. 192. 192. 189. 189. 188. 189. 189. 189. 191. 191. 190. 188.\n",
+      " 186. 187. 186. 189. 189. 186. 188. 187. 188. 188. 187. 186. 185. 187.\n",
+      " 187. 186. 184. 186. 183. 184. 183. 185. 185. 186. 187. 189. 185. 183.\n",
+      " 185. 186. 184. 186. 186. 184. 184. 186. 183. 184. 184. 184. 183. 186.\n",
+      " 185. 182. 184. 184. 185. 183. 183. 188. 182. 182. 185. 184. 183. 183.\n",
+      " 181. 182. 183. 182. 183. 184. 182. 182. 182. 183. 181. 184. 181. 181.\n",
+      " 183. 187. 184. 180. 183. 180. 185. 183. 182. 185. 184. 183. 182. 181.\n",
+      " 183. 181. 184. 183. 182. 182. 181. 184. 180. 183. 183. 183. 182. 184.\n",
+      " 182. 183. 186. 182. 183. 184. 182. 255. 252. 255. 255. 255. 252. 252.\n",
+      " 252. 252. 255. 255. 234. 234. 235. 183. 183. 235. 255. 255. 255. 213.\n",
+      " 184. 185. 184. 189. 184. 184. 186. 184. 186. 186. 185. 186. 187. 186.\n",
+      " 188. 190. 188. 185. 186. 185. 185. 187. 184. 185. 185. 189. 185. 186.\n",
+      " 189. 185. 186. 187. 184. 187. 185. 186. 186. 184. 184. 186.] [155. 157. 153. 155. 154. 152. 156. 152. 154. 153. 155. 155. 155. 150.\n",
+      " 158. 156. 152. 151. 152. 155. 149. 150. 154. 155. 150. 145. 155. 153.\n",
+      " 147. 150. 152. 155. 154. 148. 154. 154. 148. 150. 153. 155. 152. 151.\n",
+      " 152. 153. 150. 151. 154. 150. 155. 147. 151. 147. 153. 151. 150. 152.\n",
+      " 152. 152. 155. 157. 153. 148. 155. 151. 147. 151. 151. 153. 151. 151.\n",
+      " 155. 154. 151. 147. 152. 156. 148. 148. 155. 153. 153. 154. 153. 155.\n",
+      " 155. 153. 154. 152. 148. 151. 149. 150. 153. 152. 155. 152. 152. 152.\n",
+      " 155. 156. 146. 155. 159. 149. 157. 155. 151. 156. 157. 156. 156. 156.\n",
+      " 154. 156. 154. 156. 156. 154. 156. 159. 151. 154. 155. 157. 154. 155.\n",
+      " 154. 160. 150. 151. 157. 156. 156. 156. 159. 157. 155. 158. 156. 151.\n",
+      " 158. 157. 156. 160. 154. 157. 158. 156. 159. 154. 158. 161. 156. 158.\n",
+      " 159. 158. 158. 157. 156. 160. 158. 155. 160. 157. 151. 160. 162. 161.\n",
+      " 158. 163. 160. 160. 156. 161. 158. 158. 157. 158. 161. 161. 162. 155.\n",
+      " 159. 157. 160. 155. 158. 161. 157. 158. 158. 159. 157. 162. 160. 162.\n",
+      " 159. 157. 160. 162. 156. 160. 162. 160. 158. 160. 160. 153. 155. 159.\n",
+      " 155. 161. 158. 158. 160. 161. 159. 159. 158. 155. 158. 160. 158. 155.\n",
+      " 160. 154. 160. 158. 159. 161. 159. 157. 159. 158. 160. 156. 153. 155.\n",
+      " 160. 161. 157. 157. 162. 160. 160. 160. 158. 161. 160. 160. 158. 161.\n",
+      " 162. 158. 162. 162. 157. 160. 160. 160. 161. 161. 160. 160. 161. 163.\n",
+      " 160. 162. 162. 159. 161. 162. 157. 157. 163. 163. 160. 154. 162. 163.\n",
+      " 162. 156. 154. 157. 161. 163. 163. 158. 163. 160. 164. 162. 161. 162.\n",
+      " 162. 161. 162. 161. 153. 160. 161. 159. 163. 165. 161. 161. 158. 158.\n",
+      " 154. 162. 165. 162. 162. 162. 159. 159. 163. 162. 161. 162. 159. 157.\n",
+      " 160. 162. 157. 163. 161. 160. 158. 162. 163. 164. 160. 160. 163. 161.\n",
+      " 160. 162. 164. 161. 157. 159. 160. 157. 160. 158. 164. 160. 161. 157.\n",
+      " 160. 158. 161. 158. 162. 160. 161. 162. 165. 163. 161. 157. 158. 162.\n",
+      " 161. 163. 162. 161. 156. 161. 160. 161. 159. 162. 157. 160. 158. 157.\n",
+      " 161. 161. 155. 154. 160. 154. 160. 159. 160. 159. 159. 160. 161. 159.\n",
+      " 158. 160. 161. 156. 157. 148. 158. 156. 158. 156. 155. 158. 154. 158.\n",
+      " 161. 156. 156. 157. 154. 148. 153. 152. 146. 149. 149. 147. 141. 145.\n",
+      " 143. 142. 130. 132. 125. 120. 113. 101.  83.  77.  76.  78.  81.  88.\n",
+      "  88.  89.  87.  87.  83.  68.  68.  56.  47.  47.  50.  54.  62.  60.\n",
+      "  65.  66.  68.  74.  73.  72.  75.  80.  82.  82.  74.  82.  85.  87.\n",
+      "  91.  91.  87.  86.  86.  81.  86.  84.  83.  79.  93.  94.  95.  95.\n",
+      "  95.  97. 104. 113. 119. 121. 122. 128. 131. 130. 125. 128. 143. 143.\n",
+      " 137. 144. 144. 148. 148. 147. 148. 148. 149. 146. 149. 150. 145. 150.\n",
+      " 150. 149. 151. 153. 153. 156. 153. 159. 158. 159. 159. 157. 158. 153.\n",
+      " 159. 156. 159. 160. 158. 158. 160. 155. 161. 157. 161. 156. 161. 159.\n",
+      " 159. 156. 157. 157. 157. 161. 158. 158. 157. 161. 162. 159. 157. 159.\n",
+      " 159. 159. 158. 160. 162. 157. 161. 161. 161. 157. 158. 160. 160. 160.\n",
+      " 155. 159. 156. 159. 152. 160. 162. 160. 158. 159. 162. 152. 158. 161.\n",
+      " 157. 155. 159. 157. 162. 160. 156. 159. 160. 158. 156. 156. 154. 157.\n",
+      " 158. 160. 159. 159. 158. 161. 161. 158. 158. 160. 157. 160. 159. 162.\n",
+      " 157. 156. 161. 161. 158. 158. 160. 157. 161. 159. 159. 161. 159. 160.\n",
+      " 159. 156. 161. 157. 160. 160. 155. 158. 161. 160. 158. 159. 153. 155.\n",
+      " 161. 159. 158. 160. 158. 157. 160. 161. 156. 159. 156. 157. 155. 159.\n",
+      " 157. 158. 157. 157. 156. 157. 153. 155. 154. 158. 151. 153. 158. 159.\n",
+      " 156. 157. 152. 156. 154. 154. 157. 155. 152. 157. 157. 151. 152. 157.\n",
+      " 158. 151. 155. 148. 153. 152. 153. 150. 155. 156. 153. 154. 153. 152.\n",
+      " 145. 148. 153. 153. 154. 155. 155. 156. 152. 152. 155. 153. 156. 155.\n",
+      " 155. 150. 147. 151. 153. 154. 152. 153. 154. 155. 153. 155. 154. 152.\n",
+      " 150. 154. 154. 155. 153. 152. 153. 153. 152. 146. 153. 151. 149. 153.\n",
+      " 153. 157. 154. 156. 156. 156. 154. 151. 156. 156. 158. 156. 156. 150.\n",
+      " 151. 155. 153. 153. 156. 155. 151. 158. 154. 154. 154. 157. 156. 154.\n",
+      " 155. 157. 157. 157. 150. 157. 157. 146. 154. 157. 154. 156.] 255.0 47.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.set_printoptions(threshold=sys.maxsize)\n",
+    "\n",
+    "[x, y] = img_gray.shape\n",
+    "max_row = np.zeros(x)\n",
+    "min_row = np.zeros(x)\n",
+    "\n",
+    "for i in range(x):\n",
+    "    max_row[i] = np.max(img_gray[i,:])\n",
+    "    min_row[i] = np.min(img_gray[i,:])\n",
+    "\n",
+    "overall_max = np.max(max_row)\n",
+    "overall_min = np.min(min_row)\n",
+    "\n",
+    "print(max_row, min_row, overall_max, overall_min)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Global thresholding\n",
+    "_, thresh1 = cv.threshold(img_gray,100,255,cv.THRESH_BINARY)\n",
+    "_, thresh2 = cv.threshold(img_gray,125,255,cv.THRESH_BINARY)\n",
+    "_, thresh3 = cv.threshold(img_gray,150,255,cv.THRESH_BINARY)\n",
+    "\n",
+    "\n",
+    "titles = ['Original Image','Grayscale Image','100','125','150']\n",
+    "images = [img, img_gray, thresh1, thresh2, thresh3]\n",
+    "\n",
+    "viewer = napari.Viewer()\n",
+    "for i in range(len(images)):\n",
+    "    viewer.add_image(images[i], name=titles[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adapative thresholding\n",
+    "thm = cv.adaptiveThreshold(img_gray,255,cv.ADAPTIVE_THRESH_MEAN_C,cv.THRESH_BINARY,31,4)\n",
+    "thg = cv.adaptiveThreshold(img_gray,255,cv.ADAPTIVE_THRESH_GAUSSIAN_C,cv.THRESH_BINARY,31,4)\n",
+    "\n",
+    "titles = ['Original Image','Grayscale Image','Adaptive Guassian','Adaptive mean']\n",
+    "images = [img, img_gray, thm, thg]\n",
+    "\n",
+    "viewer = napari.Viewer()\n",
+    "for i in range(len(images)):\n",
+    "    viewer.add_image(images[i], name=titles[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Image layer 'opening' at 0x27718573fd0>"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kernel = cv.getStructuringElement(cv.MORPH_ELLIPSE,(4,4))\n",
+    "closing = cv.morphologyEx(thm, cv.MORPH_CLOSE, kernel)\n",
+    "\n",
+    "viewer = napari.Viewer()\n",
+    "viewer.add_image(img, name='Original Image')\n",
+    "viewer.add_image(closing, name='closing')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6942 6942\n",
+      "779482 779482\n",
+      "1 1\n",
+      "2 2\n",
+      "5 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "closing = cv.morphologyEx(thresh2, cv.MORPH_CLOSE, kernel)\n",
+    "num,labels,stats,centroids = cv.connectedComponentsWithStats(closing,connectivity=8)\n",
+    "for i in range(num):\n",
+    "    print(np.sum(labels==i),stats[i][4])\n"
    ]
   }
  ],
