excel export implemented, updated requirements

--- a/getting_started.ipynb
+++ b/getting_started.ipynb
@@ -18,19 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import psycopg2\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.ticker as ticker\n",
     "import seaborn as sns\n",
-    "from scipy import stats as st\n",
-    "from configparser import ConfigParser\n",
-    "import statsmodels.stats.multicomp as mc\n",
+    "import xlsxwriter\n",
     "from tools import connect, group, sum_by_var, count_unique, StatsForGraphs, Unpaired_ttest, MultipleComparison_ttest, Multiple_ttest, OneWayAnova, MathTextSciFormatter"
    ]
   },
@@ -1231,6 +1227,9 @@
     }
    ],
    "source": [
+    "# Connect to database\n",
+    "cursor = connect()\n",
+    "\n",
     "# Load data from table V12_Platinum_158_dataset_All_stages\n",
     "# Filter by later stages (2-II until 3-VI)\n",
     "\n",
@@ -1451,6 +1450,9 @@
     }
    ],
    "source": [
+    "# Connect to database\n",
+    "cursor = connect()\n",
+    "\n",
     "# Load data from table V12_Platinum_158_dataset_All_stages\n",
     "# Filter by specific stage and cell type/layer\n",
     "\n",
@@ -1575,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1731,7 @@
        "4            69.4824                 0.511433  132.188  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1759,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1925,7 +1927,7 @@
        "4           fu  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2065,7 +2067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2160,7 +2162,7 @@
        "6  3-IV       1793           pl    7764.126864"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2370,6 +2372,25 @@
     "count_sample_by_stage = group(df, 'stage')\n",
     "count_sample_by_stage = count_unique(count_sample_by_stage, 'sample_id')\n",
     "count_sample_by_stage"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How to: Export dataframe to excel\n",
+    "You might want to export your results to excel. Here is how to:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create excel table from dataframe\n",
+    "tissue_volume_sample.to_excel(\"output.xlsx\") # change the file name to your liking"
    ]
   }
  ],
